--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,13 @@
 {% macro displayNews(news) %}
 
-    {% for news in news %}
-        <li>{{ news.title}}</li>
-    {% endfor %}
+{% for news in news %}
+<div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 news-card">
+    <img src="{{ news.poster }}" alt="{{ news.title }} poster" class="img-responsive">
+    <li class="text-center">
+        <a href="/news/{{news.id}}">
+            {{ news.title|truncate(10)}}</a>
+    </li>
+</div>
+{% endfor %}
 
 {% endmacro %}
