--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -12,6 +12,13 @@
 
 <body>
     {% extends 'base.html'%}
+    <!-- Styles block -->
+
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/news.css')}}">
+{% endblock %}
+
     <!-- Content block -->
     {% block content %}
     <div class="container">
